classDiagram

    class Dataset {
        <<abstract>>
        -metadata: Metadata
        +__init__(metadata: Dict[str, Any])
    }

    class Metadata {
        -_metadata: Dict[str, Any]
        +__post_init__()
        +type: str
        +path: str
        +is_table: bool
        +table_details: Dict[str, str]
        +table_catalog: str
        +table_schema: str
        +table_name: str
        +is_stream: bool
        +format_options: Dict[str, Any]
        +schema: Dict[str, Any]
        +schema_string: str
        +mode: str
        +output_mode: str
        +partition_by: List[str]
        +sort_by: List[str]
        +get_column_names(): list
        +get_partition_columns(): list
        +to_dict(): Dict[str, Any]
    }

    class Input {
        -InputSource _source
        +df(spark, filter_params)
    }

    class WriteMode {
        <<enumeration>>
        APPEND
        OVERWRITE
        +from_string(str) WriteMode
    }

    class WriteStrategy {
        <<abstract>>
        +write_batch(DataFrame, writer, OutputOptions, Metadata)*
        +write_stream(DataFrame, writer, OutputOptions, Metadata)*
    }

    class AppendStrategy {
        +write_batch(DataFrame, writer, OutputOptions, Metadata)
        +write_stream(DataFrame, writer, OutputOptions, Metadata)
    }

    class OverwriteStrategy {
        -_should_evolve_schema(Dict, Dict) bool
        +write_batch(DataFrame, writer, OutputOptions, Metadata)
        +write_stream(DataFrame, writer, OutputOptions, Metadata)
    }

    class OutputOptions {
        +WriteMode mode
        +List[str] partition_by
        +List[str] sort_by
        +Dict[str, Any] format_options
    }    

    class Output {
        -Dict[WriteMode, WriteStrategy] _write_strategies
        -Metadata metadata
        -List[DataCheck] checks
        -OutputOptions options
        -WriteStrategy write_strategy
        -_validate_schema_compatibility()
        -_sync_table_properties()
        -_run_checks()
        -_prepare_writer()
        +write()
    }

    class FilterStrategy {
        <<abstract>>
        +apply_filter(source_path, filter_params)*
    }

    class FileListFilterStrategy {
        +apply_filter(source_path, filter_params)
    }

    class SqlFilterStrategy {
        +apply_filter(source_path, filter_params)
    }

    class InputSourceFactory {
        +create_input_source(config) InputSource
    }

    class InputSource {
        <<abstract>>
        -FilterStrategy _filter_strategy
        -InputConfig config
        +df(spark, filter_params)*
        #_create_filter_strategy()*
    }

    class FileInputSource {
        +df(spark, filter_params)
        #_create_filter_strategy()
    }

    class TableInputSource {
        +df(spark, filter_params)
        #_create_filter_strategy()
    }

    Dataset o-- Metadata
    Dataset <|-- Input
    Dataset <|-- Output
    FilterStrategy <|-- FileListFilterStrategy
    FilterStrategy <|-- SqlFilterStrategy
    InputSource <|-- FileInputSource
    InputSource <|-- TableInputSource
    InputSource o-- FilterStrategy
    Input o-- InputSource
    InputSourceFactory ..> InputSource
    WriteStrategy <|-- AppendStrategy
    WriteStrategy <|-- OverwriteStrategy
    Output o-- OutputOptions
    Output o-- WriteStrategy
    OutputOptions o-- WriteMode

